--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,27 @@
-<p>
-  login works!
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ingreso</title>
+  <link rel="stylesheet" href="./login.component.css"> 
+</head>
+<body>
+  <form action="">
+    <h1>SingIn</h1>
+    <input type="text" placeholder="Username">
+    <input type="password" placeholder="Password">
+    <button class="btn btn-info btn-lg btn-block" type="button" (click)="navegar()">login</button>
+  </form>
+</body>
+</html>
+
+<!-- <h3>INGRESE EL NOMBRE</h3>
+<input type="text" [(ngModel)]="nombre">
+
+
+<h3>INGRESE CORREO</h3>
+<input type="text" [(ngModel)]="correo">
+<br><br><br>
+<button (click)="NAV()">INGRESAR</button> -->
