--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="./login.component.css"> 
 </head>
 <body>
-  <form action="">
-    <h1>SingIn</h1>
+  <form action="compras.component.html" class="form-box">
+    <h1 class="form-title">SingIn</h1>
     <input type="text" placeholder="Username">
     <input type="password" placeholder="Password">
     <button class="btn btn-info btn-lg btn-block" type="button" (click)="navegar()">login</button>
