--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,9 +10,21 @@
 <body>
   <form action="compras.component.html" class="form-box">
     <h1 class="form-title">SingIn</h1>
-    <input type="text" placeholder="Username">
-    <input type="password" placeholder="Password">
+
+    <div class="form-outline mb-2">
+      <input type="text" id="user" name="user" class="form-control form-control-sm" [(ngModel)]="nombre" />
+      <label class="form-label" for="user">Usuario</label>
+    </div>
+
+    <div class="form-outline mb-4">
+      <input type="password" id="email" name="email" class="form-control form-control-sm" [(ngModel)]="correo" />
+      <label class="form-label" for="email">Contraseña</label>
+    </div>
+
+    <div class="pt-1 mb-4">
       <button class="btn btn-info btn-lg btn-block" type="button" (click)="navegar()">login</button>
+    </div>
+
   </form>
 </body>
 </html>
