--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,3 +1,7 @@
-<p>
-  error works!
-</p>
+<table align="center">
+  <tr>
+    <h1>ERROR 404: USUARIO NO ENCONTRADO</h1></tr>
+    <tr>
+      <button (click)="navegar()">Regresar</button></tr>
+</table>
+<br>
