--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,7 +1,18 @@
-<table align="center">
-  <tr>
-    <h1>ERROR 404: USUARIO NO ENCONTRADO</h1></tr>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Error 404</title>
+</head>
+<body>
+  <table align="center">
     <tr>
-      <button (click)="navegar()">Regresar</button></tr>
-</table>
-<br>
+      <h1>ERROR 404: USUARIO NO ENCONTRADO</h1></tr>
+      <tr>
+        <button (click)="navegar()">Regresar</button></tr>
+  </table>
+  <br>
+</body>
+</html>
