--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -5,14 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Error 404</title>
+  <link rel="stylesheet" href="./error.component.css">
 </head>
 <body>
-  <table align="center">
+  <div class="soso">
+    <table>
     <tr>
-      <h1>ERROR 404: USUARIO NO ENCONTRADO</h1></tr>
+      <h1 class="tt">ERROR 404: USUARIO NO ENCONTRADO</h1>
+    </tr>
       <tr>
-        <button (click)="navegar()">Regresar</button></tr>
+        <button class="nar" (click)="navegar()">Regresar</button>
+      </tr>
   </table>
+</div>
   <br>
 </body>
 </html>
