--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,33 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ingreso</title>
-  <link rel="stylesheet" href="./login.component.css"> 
-</head>
-<body>
-  <form action="compras.component.html" class="form-box">
-    <h1 class="form-title">SingIn</h1>
+<link rel="stylesheet" href="./login.component.css">
+<section class="vh-100">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-6 text-black">
+        <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-1 pt-5 pt-xl-0 mt-xl-n5">
+          <form action="" class="form-box">
+            <h1 class="form-title">singin</h1>
 
-    <div class="form-outline mb-2">
-      <input type="text" id="user" name="user" class="form-control form-control-sm" [(ngModel)]="nombre" />
-      <label class="form-label" for="user">Usuario</label>
+            <div class="form-outline mb-2">
+              <input type="text" placeholder="Username" id="user" name="user" class="form-control form-control-sm" [(ngModel)]="nombre" />
+              <label class="form-label" for="user">Usuario</label>
+            </div>
+
+            <div class="form-outline mb-4">
+              <input type="password" placeholder="Password" id="email" name="email" class="form-control form-control-sm" [(ngModel)]="correo" />
+              <label class="form-label" for="email">Contraseña</label>
+            </div>
+
+            <div class="pt-1 mb-4">
+              <button class="btn btn-info btn-lg btn-block" type="button" (click)="navegar()">Login</button>
+            </div>
+
+          </form>
+
+        </div>
+
+      </div>
     </div>
+  </div>
+</section>
 
-    <div class="form-outline mb-4">
-      <input type="password" id="email" name="email" class="form-control form-control-sm" [(ngModel)]="correo" />
-      <label class="form-label" for="email">Contraseña</label>
-    </div>
 
-    <div class="pt-1 mb-4">
-      <button class="btn btn-info btn-lg btn-block" type="button" (click)="navegar()">login</button>
-    </div>
-
-  </form>
-</body>
-</html>
 
 <!-- <h3>INGRESE EL NOMBRE</h3>
 <input type="text" [(ngModel)]="nombre">
