--- a/src/app/components/pago/pago.component.html
+++ b/src/app/components/pago/pago.component.html
@@ -1,3 +1,33 @@
-<p>
-  pago works!
-</p>
+<header>
+<body>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12">Carrito</div>
+        </div>
+    </div>
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Imagen</th>
+            <th scope="col">Descripcion</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Total</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let dato of datos">
+            <th scope="row"> <img src="{{dato[0]}}" alt=""></th>
+            <td>{{dato[1]}}</td>
+            <td>{{dato[2]}}</td>
+            <td>{{dato[3]}}</td>
+            <td>{{dato[4]}}</td>
+          </tr>
+          <tr>
+            <td colspan="5"><h3>TOTAL: ${{total}}</h3></td>
+          </tr>
+          
+      </table>
+</body>
+</header>
