--- a/src/app/components/compras/compras.component.html
+++ b/src/app/components/compras/compras.component.html
@@ -5,8 +5,324 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MakStore</title>
+  <link rel="stylesheet" href="./compras.component.css">
 </head>
 <body>
+  <div class="col-sm-12">
+    <header>
+      <div class="row">
+        <div class="col-sm-6">
+          Violette's Store
+        </div>
+        <div class="col-sm-6" >
+          <div class="container text-left ">
+            <div class="col-sm-12">
+              <div class="row mt-5">
+                <div class="col-sm-3">
+                  <button type="button" class="btn btn-primary" (click)="limpiar()" (click)="carro=0">Limpiar</button>
+                </div>
+                <div class="col-sm-3">
+                  TOTAL:${{carro}}
+                </div>
+                <div class="col-sm-3">
+                  <button type="button" class="btn btn-primary" (click)="nav()">Salir</button>
+                </div>
+                <div class="col-sm-3">
+                  <button type="button" class="btn btn-primary" (click)="nav2()">Comprar
+                    <img src="assets/Imagenes/carrito.png" alt="" class="carro">
+                  </button>
+                  <br><br>
   
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+  
+  
+  
+      </div>
+    </header>
+  
+    <body>
+      <div class="col-sm-12 mt-4">
+        Productos
+      </div>
+  
+      <div class="col-sm-12">
+        <div class="row">
+          <div class="col-sm-5">
+            <div class="row">
+              <div class="col-sm-12 ">
+                <div class="contenedor">
+                  <figure>
+                    <img src="assets/Imagenes/mause.jpg" alt=""
+                      class="imagen">
+                    <div class="capa">
+                      <H5>Mouse</H5>
+                      <P>
+                        Mause alambrico
+                        <br>de 2000 dpi ideal para
+                        <br>jugar algo
+                      </P>
+                    </div>
+  
+  
+                  </figure>
+                </div>
+                Precio: 20$
+              </div>
+              <div class="col-sm-2">
+                <button class="btn btn-outline-success" (click)="cantidad=cantidad+1"
+                  (click)="sumar( 20,'Producto1',cantidad,total)">Mas</button>
+              </div>
+              <div class="col-sm-8">
+                <input type="number" [(ngModel)]="cantidad">
+                {{total}}
+              </div>
+              <div class="col-sm-2"><button (click)="cantidad=cantidad-1" class="btn btn-outline-danger"
+                  (click)="restar(  20,'Producto1',cantidad,total)">Menos</button></div>
+              <div class="d-grid gap-2 col-6 mx-auto"><button
+                  (click)="comprar( 20,'Producto1',cantidad,total)">AÑADIR</button></div>
+  
+            </div>
+          </div>
+          <div class="col-sm-5">
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="contenedor">
+                  <figure>
+                    <img src="https://m.media-amazon.com/images/I/71feD0H6VTL._AC_SY355_.jpg" alt="" class="imagen">
+                    <div class="capa">
+                      <H5>Teclado de Membrana</H5>
+                      <P>
+                        60% Teclado para Juegos con Teclas de Membrana Profesional, Mini Compacto 62 Teclas,
+                        <br>USB Cable Teclado Gaming, RGB.
+                        <br>
+                        <br>
+                      </P>
+                    </div>
+  
+  
+                  </figure>
+                </div>
+                Precio: 15$
+              </div>
+              <div class="col-sm-2">
+                <button class="btn btn-outline-success" (click)="cantidad2=cantidad2+1"
+                  (click)="sumar( 15,'Producto2',cantidad2,total2)">Mas</button>
+              </div>
+              <div class="col-sm-8">
+                <input type="number" [(ngModel)]="cantidad2">
+                {{total2}}
+              </div>
+              <div class="col-sm-2"><button (click)="cantidad2=cantidad2-1" class="btn btn-outline-danger"
+                  (click)="restar(  15,'Producto2',cantidad2,total2)">Menos</button></div>
+              <div class="d-grid gap-2 col-6 mx-auto"><button
+                  (click)="comprar( 15,'Producto2',cantidad2,total2)">AÑADIR</button></div>
+  
+            </div>
+          </div>
+          <div class="col-sm-5 mt-4">
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="col-sm-12">
+                  <div class="contenedor">
+                    <figure>
+                      <img
+                        src="https://ae01.alicdn.com/kf/H8f2d8be28f1a48fa9e011a79cb73fa64Z/USB-2-0-de-SanDisk-Pen-Drive-32gb-CZ61-disco-Flash-USB-Flash-Pendrive-64gb-128gb.jpg"
+                        alt="" class="imagen">
+                      <div class="capa">
+                        <H5>Memoria USB 132GB</H5>
+                        <P>USB 2,0 de SanDisk Pen Drive 132gb CZ61 disco Flash USB Flash Pendrive 
+                        </P>
+                      </div>
+  
+  
+                    </figure>
+                  </div>
+                  Precio: 12$
+                </div>
+              </div>
+              <div class="col-sm-2">
+                <button class="btn btn-outline-success" (click)="cantidad3=cantidad3+1"
+                  (click)="sumar( 12,'Producto3',cantidad3,total3)">Mas</button>
+              </div>
+              <div class="col-sm-8">
+                <input type="number" [(ngModel)]="cantidad3">
+                {{total2}}
+              </div>
+              <div class="col-sm-2"><button (click)="cantidad3=cantidad3-1" class="btn btn-outline-danger"
+                  (click)="restar(  12,'Producto3',cantidad3,total3)">Menos</button></div>
+              <div class="d-grid gap-2 col-6 mx-auto"><button
+                  (click)="comprar( 12,'Producto3',cantidad3,total3)">AÑADIR</button></div>
+  
+            </div>
+          </div>
+  
+          <div class="col-sm-5 mt-4">
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="contenedor">
+                  <figure>
+                    <img src="https://www.idcmayoristas.com/wp-content/uploads/2021/04/PROCESADOR-INTEL-CORE-I7-11700.png" alt="" class="imagen">
+                    <div class="capa">
+                      <H5>CORE I7</H5>
+                      <P>PROCESADOR INTEL CORE I7 11700 (11VA) *CON VIDEO* MAX 4.90 GHz 16MB FC-LGA14A - BX8070811700 99AFTZ
+                      </P>
+                    </div>
+  
+  
+                  </figure>
+                </div>
+                Precio: 20$
+              </div>
+              <div class="col-sm-2">
+                <button class="btn btn-outline-success" (click)="cantidad4=cantidad4+1"
+                  (click)="sumar( 20,'Producto4',cantidad4,total4)">Mas</button>
+              </div>
+              <div class="col-sm-8">
+                <input type="number" [(ngModel)]="cantidad4">
+                {{total2}}
+              </div>
+              <div class="col-sm-2"><button (click)="cantidad4=cantidad4-1" class="btn btn-outline-danger"
+                  (click)="restar(  20,'Producto4',cantidad4,total4)">Menos</button></div>
+              <div class="d-grid gap-2 col-6 mx-auto"><button
+                  (click)="comprar( 20,'Producto4',cantidad4,total4)">AÑADIR</button></div>
+  
+            </div>
+          </div>
+          <div class="col-sm-5 mt-4">
+            <div class="row">
+              <div class="col-sm-12">
+                
+                <div class="contenedor">
+                  <figure>
+                    <img src="assets/Imagenes/case.jpg" alt="" class="imagen">
+                    <div class="capa">
+                      <H5>CASE</H5>
+                      <P>Panel frontal de malla juego ATX Caso Blanco Caja del ordenador, PC componentes del equipo</P>
+                    </div>
+  
+  
+                  </figure>
+                </div>
+                Precio: 112$
+              </div>
+              <div class="col-sm-2">
+                <button class="btn btn-outline-success" (click)="cantidad5=cantidad5+1"
+                  (click)="sumar( 112,'Producto5',cantidad5,total5)">Mas</button>
+              </div>
+              <div class="col-sm-8">
+                <input type="number" [(ngModel)]="cantidad5">
+              </div>
+              <div class="col-sm-2"><button (click)="cantidad5=cantidad5-1" class="btn btn-outline-danger"
+                  (click)="restar(  112,'Producto5',cantidad5,total5)">Menos</button></div>
+              <div class="d-grid gap-2 col-6 mx-auto"><button
+                  (click)="comprar( 112,'Producto5',cantidad5,total5)">AÑADIR</button></div>
+            </div>
+          </div>
+  
+          <div class="col-sm-5 mt-4">
+            <div class="row">
+              <div class="col-sm-12"> 
+                
+                
+                <div class="contenedor">
+                  <figure>
+                    <img src="assets/Imagenes/headsets.jpg" alt="" class="imagen">
+                    <div class="capa">
+                      <H5>Auriculares</H5>
+                      <P>auriculares con cable, auriculares para juegos con emisión de luz RGB PS4</P>
+                     </div>
+  
+  
+                  </figure>
+                </div>
+                Precio: 229$
+              </div>
+              <div class="col-sm-2">
+                <button class="btn btn-outline-success" (click)="cantidad6=cantidad6+1"
+                  (click)="sumar( 5,'Producto6',cantidad6,total6)">Mas</button>
+              </div>
+              <div class="col-sm-8">
+                <input type="number" [(ngModel)]="cantidad6">
+              </div>
+              <div class="col-sm-2"><button (click)="cantidad6=cantidad6-1" class="btn btn-outline-danger"
+                  (click)="restar(  5,'Producto6',cantidad6,total6)">Menos</button></div>
+              <div class="d-grid gap-2 col-6 mx-auto"><button
+                  (click)="comprar( 5,'Producto6',cantidad6,total6)">AÑADIR</button></div>
+            </div>
+          </div>
+          <div class="col-sm-5 mt-4">
+            <div class="row">
+              <div class="col-sm-12"> 
+                <div class="col-sm-12"> 
+                
+                
+                  <div class="contenedor">
+                    <figure>
+                      <img src="assets/Imagenes/tarjeta.jpg" alt="" class="imagen">
+                      <div class="capa">
+                        <H5>Tarjeta gráfica GIGABYTE Radeon RX 6500 XT</H5>
+                        <P>sistema de enfriamiento WINDFORCE 3X, GDDR6 de 4 GB y 64 bits
+                        </P>
+                        </div>
+
+
+                    </figure>
+                  </div>
+                  Precio: 210.99$
+                </div>
+              </div>
+              <div class="col-sm-2">
+                <button class="btn btn-outline-success" (click)="cantidad7=cantidad7+1"
+                  (click)="sumar( 210.99,'Producto7',cantidad7,total7)">Mas</button>
+              </div>
+              <div class="col-sm-8">
+                <input type="number" [(ngModel)]="cantidad7">
+              </div>
+              <div class="col-sm-2"><button (click)="cantidad7=cantidad7-1" class="btn btn-outline-danger"
+                  (click)="restar(  210.99,'Producto7',cantidad7,total7)">Menos</button></div>
+              <div class="d-grid gap-2 col-6 mx-auto"><button
+                  (click)="comprar( 210.99,'Producto7',cantidad7,total7)">AÑADIR</button></div>
+            </div>
+          </div>
+          <div class="col-sm-5 mt-4">
+            <div class="row">
+              <div class="col-sm-12"> 
+                <div class="col-sm-12"> 
+                  <div class="contenedor">
+                    <figure>
+                      <img src="assets/Imagenes/pantalla.jpg" alt="" class="imagen">
+                      <div class="capa">
+                        <H5>Monitor ASUS TUF Gaming de 25 pulgadas y 1080P</H5>
+                        <P>
+                          Full HD, IPS, 144 Hz, 1 ms, movimiento borroso extremadamente bajo, altavoz
+                        </P>
+                       </div>
+                    </figure>
+                  </div>
+                  Precio: 287$
+                </div>
+              </div>
+              <div class="col-sm-2">
+                <button class="btn btn-outline-success" (click)="cantidad8=cantidad8+1"
+                  (click)="sumar( 1,'Producto8',cantidad8,total8)">Mas</button>
+              </div>
+              <div class="col-sm-8">
+                <input type="number" [(ngModel)]="cantidad8">
+              </div>
+              <div class="col-sm-2"><button (click)="cantidad8=cantidad8-1" class="btn btn-outline-danger"
+                  (click)="restar(  1,'Producto8',cantidad8,total8)">Menos</button></div>
+              <div class="d-grid gap-2 col-6 mx-auto"><button
+                  (click)="comprar( 1,'Producto8',cantidad8,total8)">AÑADIR</button></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </body>
+  </div>
 </body>
 </html>
