--- a/src/app/components/compras/compras.component.html
+++ b/src/app/components/compras/compras.component.html
@@ -25,11 +25,11 @@
                   TOTAL:${{carro}}
                 </div>
                 <div class="col-sm-3">
-                  <button type="button" class="btn btn-primary" (click)="nav()">Salir</button>
+                  <button type="button" class="btn btn-primary" (click)="navegar()">Salir</button>
                 </div>
                 <div class="col-sm-3">
-                  <button type="button" class="btn btn-primary" (click)="nav2()">Comprar
-                    <img src="assets/Imagenes/carrito.png" alt="" class="carro">
+                  <button type="button" class="btn btn-primary" (click)="navegar2()">Comprar
+                    <img src="https://icones.pro/wp-content/uploads/2021/05/icone-de-panier-noir.png" alt="" class="carro">
                   </button>
                   <br><br>
   
@@ -57,14 +57,15 @@
               <div class="col-sm-12 ">
                 <div class="contenedor">
                   <figure>
-                    <img src="assets/Imagenes/mause.jpg" alt=""
+                    <img src="https://i.pinimg.com/564x/84/fb/dc/84fbdc94a0d7f1eef540b8b4c65f8f3c.jpg" alt=""
                       class="imagen">
                     <div class="capa">
-                      <H5>Mouse</H5>
+                      <H5>Mascarilla Facial</H5>
                       <P>
-                        Mause alambrico
-                        <br>de 2000 dpi ideal para
-                        <br>jugar algo
+                        Mascarilla de puntos
+                        <br>Para alivia la piel
+                        <br>cansada de elementos
+                        <br>externos
                       </P>
                     </div>
   
