--- a/src/app/components/compras/compras.component.html
+++ b/src/app/components/compras/compras.component.html
@@ -45,7 +45,7 @@
       </div>
     </header>
   
-    <body>
+    <body class="laminas">
       <div class="col-sm-12-mt-4">
         Productos
       </div>
@@ -72,20 +72,20 @@
   
                   </figure>
                 </div>
-                Precio: 20$
+                Precio: 12.50$
               </div>
               <div class="col-sm-2">
                 <button class="btn btn-outline-success" (click)="cantidad=cantidad+1"
-                  (click)="sumar( 20,'Producto1',cantidad,total)">Mas</button>
+                  (click)="sumar( 12.50,'Producto1',cantidad,total)">Mas</button>
               </div>
               <div class="col-sm-8">
                 <input class="cant" type="number" [(ngModel)]="cantidad">
                 {{total}}
               </div>
               <div class="col-sm-2"><button (click)="cantidad=cantidad-1" class="btn btn-outline-danger"
-                  (click)="restar(  20,'Producto1',cantidad,total)">Menos</button></div>
+                  (click)="restar(  12.50,'Producto1',cantidad,total)">Menos</button></div>
               <div class="d-grid gap-2 col-6 mx-auto"><button
-                  (click)="comprar( 20,'Producto1',cantidad,total)">AÑADIR</button></div>
+                  (click)="comprar( 12.50,'Producto1',cantidad,total)">AÑADIR</button></div>
   
             </div>
           </div>
@@ -94,13 +94,13 @@
               <div class="col-sm-12">
                 <div class="contenedor">
                   <figure>
-                    <img src="https://m.media-amazon.com/images/I/71feD0H6VTL._AC_SY355_.jpg" alt="" class="imagen">
+                    <img src="https://i.pinimg.com/564x/57/54/94/575494f2336026825b21620d1926e057.jpg" alt="" class="imagen">
                     <div class="capa">
-                      <H5>Teclado de Membrana</H5>
+                      <H5>Brillo labial</H5>
                       <P>
-                        60% Teclado para Juegos con Teclas de Membrana Profesional, Mini Compacto 62 Teclas,
-                        <br>USB Cable Teclado Gaming, RGB.
-                        <br>
+                        Promete un acabdo naturar en tus labios
+                        <br>con sabor a fresa e increibles 
+                        <br>acabados en diseño y color
                         <br>
                       </P>
                     </div>
@@ -108,20 +108,20 @@
   
                   </figure>
                 </div>
-                Precio: 15$
+                Precio: 6.50$
               </div>
               <div class="col-sm-2">
                 <button class="btn btn-outline-success" (click)="cantidad2=cantidad2+1"
-                  (click)="sumar( 15,'Producto2',cantidad2,total2)">Mas</button>
+                  (click)="sumar( 6.50,'Producto2',cantidad2,total2)">Mas</button>
               </div>
               <div class="col-sm-8">
                 <input class="cant" type="number" [(ngModel)]="cantidad2">
                 {{total2}}
               </div>
               <div class="col-sm-2"><button (click)="cantidad2=cantidad2-1" class="btn btn-outline-danger"
-                  (click)="restar(  15,'Producto2',cantidad2,total2)">Menos</button></div>
+                  (click)="restar(  6.50,'Producto2',cantidad2,total2)">Menos</button></div>
               <div class="d-grid gap-2 col-6 mx-auto"><button
-                  (click)="comprar( 15,'Producto2',cantidad2,total2)">AÑADIR</button></div>
+                  (click)="comprar( 6.50,'Producto2',cantidad2,total2)">AÑADIR</button></div>
   
             </div>
           </div>
@@ -132,32 +132,32 @@
                   <div class="contenedor">
                     <figure>
                       <img
-                        src="https://ae01.alicdn.com/kf/H8f2d8be28f1a48fa9e011a79cb73fa64Z/USB-2-0-de-SanDisk-Pen-Drive-32gb-CZ61-disco-Flash-USB-Flash-Pendrive-64gb-128gb.jpg"
+                        src="https://i.pinimg.com/564x/96/76/ac/9676accde0cf75c594dbc2eddbebaf76.jpg"
                         alt="" class="imagen">
                       <div class="capa">
-                        <H5>Memoria USB 132GB</H5>
-                        <P>USB 2,0 de SanDisk Pen Drive 132gb CZ61 disco Flash USB Flash Pendrive 
+                        <H5>Fragancia</H5>
+                        <P>Con mas de 50 olores a su disposición 
                         </P>
                       </div>
   
   
                     </figure>
                   </div>
-                  Precio: 12$
+                  Precio: 9$
                 </div>
               </div>
               <div class="col-sm-2">
                 <button class="btn btn-outline-success" (click)="cantidad3=cantidad3+1"
-                  (click)="sumar( 12,'Producto3',cantidad3,total3)">Mas</button>
+                  (click)="sumar( 9,'Producto3',cantidad3,total3)">Mas</button>
               </div>
               <div class="col-sm-8">
                 <input class="cant" type="number" [(ngModel)]="cantidad3">
                 {{total2}}
               </div>
               <div class="col-sm-2"><button (click)="cantidad3=cantidad3-1" class="btn btn-outline-danger"
-                  (click)="restar(  12,'Producto3',cantidad3,total3)">Menos</button></div>
+                  (click)="restar(  9,'Producto3',cantidad3,total3)">Menos</button></div>
               <div class="d-grid gap-2 col-6 mx-auto"><button
-                  (click)="comprar( 12,'Producto3',cantidad3,total3)">AÑADIR</button></div>
+                  (click)="comprar( 9,'Producto3',cantidad3,total3)">AÑADIR</button></div>
   
             </div>
           </div>
@@ -167,30 +167,30 @@
               <div class="col-sm-12">
                 <div class="contenedor">
                   <figure>
-                    <img src="https://www.idcmayoristas.com/wp-content/uploads/2021/04/PROCESADOR-INTEL-CORE-I7-11700.png" alt="" class="imagen">
+                    <img src="https://i.pinimg.com/564x/9a/e7/c1/9ae7c1340c7a782a32da279aa6f3183a.jpg" alt="" class="imagen">
                     <div class="capa">
-                      <H5>CORE I7</H5>
-                      <P>PROCESADOR INTEL CORE I7 11700 (11VA) *CON VIDEO* MAX 4.90 GHz 16MB FC-LGA14A - BX8070811700 99AFTZ
+                      <H5>Serums</H5>
+                      <P>Aclarador, para quitar manchar...para pieles grasas, semigrasas o secas. Para el acné
                       </P>
                     </div>
   
   
                   </figure>
                 </div>
-                Precio: 20$
+                Precio: 16$
               </div>
               <div class="col-sm-2">
                 <button class="btn btn-outline-success" (click)="cantidad4=cantidad4+1"
-                  (click)="sumar( 20,'Producto4',cantidad4,total4)">Mas</button>
+                  (click)="sumar( 16,'Producto4',cantidad4,total4)">Mas</button>
               </div>
               <div class="col-sm-8">
                 <input class="cant" type="number" [(ngModel)]="cantidad4">
                 {{total2}}
               </div>
               <div class="col-sm-2"><button (click)="cantidad4=cantidad4-1" class="btn btn-outline-danger"
-                  (click)="restar(  20,'Producto4',cantidad4,total4)">Menos</button></div>
+                  (click)="restar(  16,'Producto4',cantidad4,total4)">Menos</button></div>
               <div class="d-grid gap-2 col-6 mx-auto"><button
-                  (click)="comprar( 20,'Producto4',cantidad4,total4)">AÑADIR</button></div>
+                  (click)="comprar( 16,'Producto4',cantidad4,total4)">AÑADIR</button></div>
   
             </div>
           </div>
@@ -200,28 +200,28 @@
                 
                 <div class="contenedor">
                   <figure>
-                    <img src="assets/Imagenes/case.jpg" alt="" class="imagen">
+                    <img src="https://i.pinimg.com/564x/99/8a/a6/998aa6223ac3ed8fa61e65554638416b.jpg" alt="" class="imagen">
                     <div class="capa">
-                      <H5>CASE</H5>
-                      <P>Panel frontal de malla juego ATX Caso Blanco Caja del ordenador, PC componentes del equipo</P>
+                      <H5>Sombras</H5>
+                      <P>Una paleta de sombras con colores calidos y brillosos</P>
                     </div>
   
   
                   </figure>
                 </div>
-                Precio: 112$
+                Precio: 12$
               </div>
               <div class="col-sm-2">
                 <button class="btn btn-outline-success" (click)="cantidad5=cantidad5+1"
-                  (click)="sumar( 112,'Producto5',cantidad5,total5)">Mas</button>
+                  (click)="sumar( 12,'Producto5',cantidad5,total5)">Mas</button>
               </div>
               <div class="col-sm-8">
                 <input class="cant" type="number" [(ngModel)]="cantidad5">
               </div>
               <div class="col-sm-2"><button (click)="cantidad5=cantidad5-1" class="btn btn-outline-danger"
-                  (click)="restar(  112,'Producto5',cantidad5,total5)">Menos</button></div>
+                  (click)="restar(  12,'Producto5',cantidad5,total5)">Menos</button></div>
               <div class="d-grid gap-2 col-6 mx-auto"><button
-                  (click)="comprar( 112,'Producto5',cantidad5,total5)">AÑADIR</button></div>
+                  (click)="comprar( 12,'Producto5',cantidad5,total5)">AÑADIR</button></div>
             </div>
           </div>
   
@@ -232,16 +232,16 @@
                 
                 <div class="contenedor">
                   <figure>
-                    <img src="assets/Imagenes/headsets.jpg" alt="" class="imagen">
+                    <img src="https://i.pinimg.com/564x/26/05/3f/26053fbc512277a5055f9c9ebfb86859.jpg" alt="" class="imagen">
                     <div class="capa">
-                      <H5>Auriculares</H5>
-                      <P>auriculares con cable, auriculares para juegos con emisión de luz RGB PS4</P>
+                      <H5>Skincare</H5>
+                      <P>Un increíble Skincare aclarante para todo el cuerpo</P>
                      </div>
   
   
                   </figure>
                 </div>
-                Precio: 229$
+                Precio: 29$
               </div>
               <div class="col-sm-2">
                 <button class="btn btn-outline-success" (click)="cantidad6=cantidad6+1"
@@ -264,30 +264,30 @@
                 
                   <div class="contenedor">
                     <figure>
-                      <img src="assets/Imagenes/tarjeta.jpg" alt="" class="imagen">
+                      <img src="https://i.pinimg.com/564x/0e/ce/95/0ece95f2f8427dd6a197c2cfd3bd6783.jpg" alt="" class="imagen">
                       <div class="capa">
-                        <H5>Tarjeta gráfica GIGABYTE Radeon RX 6500 XT</H5>
-                        <P>sistema de enfriamiento WINDFORCE 3X, GDDR6 de 4 GB y 64 bits
+                        <H5>Cremas</H5>
+                        <P>Todo tipo de cremas hidratantes para el cuerpo
                         </P>
                         </div>
 
 
                     </figure>
                   </div>
-                  Precio: 210.99$
+                  Precio: 10.99$
                 </div>
               </div>
               <div class="col-sm-2">
                 <button class="btn btn-outline-success" (click)="cantidad7=cantidad7+1"
-                  (click)="sumar( 210.99,'Producto7',cantidad7,total7)">Mas</button>
+                  (click)="sumar( 10.99,'Producto7',cantidad7,total7)">Mas</button>
               </div>
               <div class="col-sm-8">
                 <input class="cant" type="number" [(ngModel)]="cantidad7">
               </div>
               <div class="col-sm-2"><button (click)="cantidad7=cantidad7-1" class="btn btn-outline-danger"
-                  (click)="restar(  210.99,'Producto7',cantidad7,total7)">Menos</button></div>
+                  (click)="restar(  10.99,'Producto7',cantidad7,total7)">Menos</button></div>
               <div class="d-grid gap-2 col-6 mx-auto"><button
-                  (click)="comprar( 210.99,'Producto7',cantidad7,total7)">AÑADIR</button></div>
+                  (click)="comprar( 10.99,'Producto7',cantidad7,total7)">AÑADIR</button></div>
             </div>
           </div>
           <div class="col-sm-5 mt-4">
@@ -296,16 +296,16 @@
                 <div class="col-sm-12"> 
                   <div class="contenedor">
                     <figure>
-                      <img src="assets/Imagenes/pantalla.jpg" alt="" class="imagen">
+                      <img src="https://i.pinimg.com/564x/a2/e0/6d/a2e06d22d81ffc75da527489a486b21f.jpg" alt="" class="imagen">
                       <div class="capa">
-                        <H5>Monitor ASUS TUF Gaming de 25 pulgadas y 1080P</H5>
+                        <H5>Kit de maquillaje</H5>
                         <P>
-                          Full HD, IPS, 144 Hz, 1 ms, movimiento borroso extremadamente bajo, altavoz
+                          Con mas de 15 productos, este kit de maquillaje es espectacular
                         </P>
                        </div>
                     </figure>
                   </div>
-                  Precio: 287$
+                  Precio: 35$
                 </div>
               </div>
               <div class="col-sm-2">
