--- a/src/app/components/compras/compras.component.css
+++ b/src/app/components/compras/compras.component.css
@@ -1,3 +1,16 @@
+body, html{
+    height: 100%;
+}
+body{
+    margin: 0;
+    padding: 0;
+    background-color: #2f3542;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
 .row{
     background-image: url();
     background-repeat: no-repeat;
@@ -25,11 +38,15 @@
 }
 
 .carro{
-    height: 50px;
-    width: 50px;
+    height: 20px;
+    width: 20px;
 }
 
 .imagen{
-    height: 60px;
-    width: 50px;
+    height: 260px;
+    width: 290px;
+}
+
+.laminas{
+    display: flex;
 }
