--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -4,7 +4,7 @@ body, html{
 body{
     margin: 0;
     padding: 0;
-    background-color: #2f3542;
+    background-color: #403330;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -15,7 +15,7 @@ body{
 .form-box{
     width: 300px;
     padding: 40px;
-    background-color: #191919;
+    background-color: #A69794;
     text-align: center;
 }
 
@@ -34,7 +34,7 @@ body{
     margin: 20px auto;
     padding: 14px 10px;
     text-align: center;
-    border: 2px solid #3742fa;
+    border: 2px solid #F2CCC9;
     width: 200px;
     outline: none;
     color: #fff;
@@ -50,9 +50,9 @@ body{
 
 .form-box button[type="button"]{
     border: 0;
-    background: #5352ed;
+    background: #F2E0DC;
     cursor: pointer;
-    border: 2px solid #3742fa;
+    border: 2px solid #F2CCC9;
 }
 
 .form-box button[type="button"]:hover{
